--- a/package.json
+++ b/package.json
@@ -18,14 +18,14 @@
     "reference",
     "codelens"
   ],
-  "icon": "images/icon.png",
+  "icon": "images/protobuf.png",
   "galleryBanner": {
     "color": "#C80000",
     "theme": "dark"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/yourusername/vscode-proto-extension.git"
+    "url": "https://github.com/xzthemeofsss/vscode-proto-extension.git"
   },
   "activationEvents": [
     "onLanguage:go"
